# myhbwmalloc

./: .travis.yml  LICENSE  Makefile.am  README.md  VERSION  configure.ac
include/: hbwmalloc.h
src/: Makefile  dlmalloc.c  fortraninterface.f90  hbwmalloc.c  mspace.h
test/: Makefile  test_features.c  test_libnuma.c  test_performance.c
